err/biryani.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Babel-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/Biryani-0.10.4.egg-info'...
Listing './lib/python3.5/site-packages/babel'...
Listing './lib/python3.5/site-packages/babel/locale-data'...
Listing './lib/python3.5/site-packages/babel/localtime'...
Listing './lib/python3.5/site-packages/babel/messages'...
Listing './lib/python3.5/site-packages/biryani'...
Compiling './lib/python3.5/site-packages/biryani/frconv.py'...
***   File "./lib/python3.5/site-packages/biryani/frconv.py", line 49
    depcom_re = re.compile(ur'\d[\dAB]\d{3}$')
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/biryani/gcm.py'...
***   File "./lib/python3.5/site-packages/biryani/gcm.py", line 160
    print repr(gcm_decrypt(key, '', ciphertext, '', tag))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/biryani/i18n'...
Listing './lib/python3.5/site-packages/biryani/i18n/fr'...
Listing './lib/python3.5/site-packages/biryani/i18n/fr/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/biryani/netconv.py'...
***   File "./lib/python3.5/site-packages/biryani/netconv.py", line 79
    except (socket.error, DNS.DNSError), e:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/biryani/nonstandard'...
Compiling './lib/python3.5/site-packages/biryani/uuidconv.py'...
***   File "./lib/python3.5/site-packages/biryani/uuidconv.py", line 42
    uuid_re = re.compile(ur'[\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12}$')
                                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
